# LTO_RAG_Chatbot_System

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: cz_bump.yaml  pre_commit_check.yaml
LTO_RAG/: .python-version  pyvenv.cfg
notebooks/: Data_Processing.ipynb  [POC]_RAG_Workbook-Jeryl.ipynb  [POC]_RAG_Workbook-Marco.ipynb  [POC_BASE]_RAG_Workbook-Marco-orig.ipynb  [SCRATCH]_RAG_Workbook-Jemar.ipynb  chunking.ipynb  naive_rag_v1.ipynb
notebooks/eval/: LTO_EXAM.csv  LTO_EXAM_QnA.csv  [POC_BASE]_RAG_Workbook-Jeryl_Evaluation-FinalBase_ChunksTrue.ipynb  [POC_BASE]_RAG_Workbook-Jeryl_Evaluation-llama3-3.ipynb  [POC_BASE]_RAG_Workbook-Jeryl_Evaluation.ipynb  [POC_QTRANS]_RAG_Workbook-Jeryl-COT.ipynb  [POC_QTRANS]_RAG_Workbook-Jeryl_HyDE.ipynb  [POC_QTRANS]_RAG_Workbook-Jeryl_SubQuery_MANUAL_MoreQueries.ipynb  pg_eval_dataset_GPT4_generated.json  pg_eval_dataset_LLAMA3.1_generated.json  pg_eval_dataset_LLAMA3.3_generated.json
notebooks/scratch/: [SCRATCH]_Naive_RAG_Llamaindex.ipynb  [SCRATCH]_RAG_Workbook.ipynb  [SCRATCH]_initial_prototpye.ipynb  [SCRATCH]data_dict_generator.ipynb
notebooks/scratch/Jemaar/: [SCRATCH]_RAG_Workbook-Jemar.ipynb
notebooks/scratch/Jeryl/: [POC]_RAG_Workbook-Jeryl.ipynb  [POC_BASE]_RAG_Workbook-Jeryl_Evaluation-Llama3-1.ipynb  [SCRATCH]_RAG_Workbook-Jeryl-COT.ipynb  [SCRATCH]_RAG_Workbook-Jeryl_Evaluation.ipynb  [SCRATCH]_RAG_Workbook-Jeryl_HyDE.ipynb  [SCRATCH]_RAG_Workbook-Jeryl_HyDE_v2.ipynb  [SCRATCH]_RAG_Workbook-Jeryl_SubQuery.ipynb  (+5 more)
scripts/: LTO_RAG.py
(+88 files in other folders)
