[tool.poetry]
name = "lto-rag-reviewer"
version = "0.4.0"
description = ""
authors = ["Jon Marco Francisco <jnmrco08@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.4.4"
jupyter = "^1.1.1"
llama-index = "^0.12.7"
faiss-cpu = "^1.9.0.post1"
llama-index-vector-stores-faiss = "^0.3.0"
llama-index-embeddings-ollama = "^0.5.0"
llama-index-llms-ollama = "^0.5.0"
llama-index-retrievers-bm25 = "^0.5.0"
pandas = "^2.2.3"
pymupdf = "^1.25.1"
langchain = "^0.3.13"
gradio = "^5.9.1"
sentence-transformers = "^3.3.1"
langchain-community = "^0.3.13"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
commitizen = "^4.1.0"
jupyter = "^1.1.1"
wikipedia = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | poetry.lock
)/
'''


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
version_files = [
    "pyproject.toml:version",
    "__version__.py"
]
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag = true
